# ComfyUI_Custom_Nodes_AlekPet

./: .gitignore  LICENSE  README.md  __init__.py  config.json  pyproject.toml
.github/workflows/: publish.yml
ArgosTranslateNode/: README.md  argos_translate_node.py  requirements.txt
ArgosTranslateNode/js/: argos_tranlsate_node.js
ChatGLMNode/: README.md  chatglm_node.py  chatglm_translate_node.py  config.json  config.json.example
DeepLXTranslateNode/: .gitignore  README.md  deeplx_translate_node.py  install_deeplx.py  run_install_deeplx_linux.sh  run_install_deeplx_windows.cmd
DeepTranslatorNode/: README.md  config.json  config.json.example  deep_translator_node.py  requirements.txt
DeepTranslatorNode/js/: deep_translator_node.js
ExtrasNode/: README.md  extras_node.py
ExtrasNode/css/: extras_node_styles.css
ExtrasNode/js/: extras_node.js  extras_preview_image_size.js  extras_preview_media.js  extras_speech_and_recognition.js  utils.js
ExtrasNode/lib/: extras_node_dialogs.js  extras_node_widgets.js  extras_speech_and_recognation_dialog.js
GoogleTranslateNode/: README.md  google_translate_node.py  requirements.txt
GoogleTranslateNode/js/: google_translate_node.js
IDENode/: README.md  ide_node.py
IDENode/js/: ide_node.js
PainterNode/: .gitignore  README.md  painter_node.py
PainterNode/css/: painter_node_styles.css  painter_node_user_fonts.css
PoseNode/: README.md  pose_node.py  workflow.json
PoseNode/lib/: fabric.js
PythonNode/: python_node.py
TranslateCLIPTextEncodeNode/: README.md  translate_clip_text_encode_node.py
TranslateNode/: README.md  config.json  deep_translator_node.py  detect_languages_list.json  requirements.txt  translate_node.py
example_workflows/: ai_translate_opus-mt_idenode_workflow.json  posenode_workflow.json
web_alekpet_nodes/: argos_tranlsate_node.js  deep_translator_node.js  extras_preview_media.js  extras_speech_and_recognition.js  ide_node.js  painter_node.js  pose_node.js  utils.js
(+326 files in other folders)
