[project]
name = "comfyui_custom_nodes_alekpet"
description = "Nodes: PoseNode, PainterNode, TranslateTextNode, TranslateCLIPTextEncodeNode, DeepTranslatorTextNode, DeepTranslatorCLIPTextEncodeNode, ArgosTranslateTextNode, ArgosTranslateCLIPTextEncodeNode, PreviewTextNode, HexToHueNode, ColorsCorrectNode, IDENode."
version = "1.0.23"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/AlekPet/ComfyUI_Custom_Nodes_AlekPet"

[tool.comfy]
PublisherId = "alekpet"
DisplayName = "ComfyUI_Custom_Nodes_AlekPet"
Icon = ""
