[project]
name = "comfyui_custom_nodes_alekpet"
description = "Nodes: PoseNode, PainterNode, TranslateTextNode, TranslateCLIPTextEncodeNode, DeepTranslatorTextNode, DeepTranslatorCLIPTextEncodeNode, ArgosTranslateTextNode, ArgosTranslateCLIPTextEncodeNode, ChatGLM4TranslateCLIPTextEncodeNode, ChatGLM4TranslateTextNode, ChatGLM4InstructNode, ChatGLM4InstructMediaNode, PreviewTextNode, HexToHueNode, ColorsCorrectNode, IDENode."
version = "1.0.55"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/AlekPet/ComfyUI_Custom_Nodes_AlekPet"

[tool.comfy]
PublisherId = "alekpet"
DisplayName = "ComfyUI_Custom_Nodes_AlekPet"
Icon = ""
